--- a/WebAdmin/Views/design/css/style.css
+++ b/WebAdmin/Views/design/css/style.css
@@ -3,6 +3,18 @@ body{
   background-size: 100%;
 }
 
+#logo_login {
+  background-image: url("../img/ReachUpLogo.jpg");
+  background-repeat: no-repeat;
+  background-clip: content-box;
+  width: 250px;
+  height: 250px;
+  background-size: 250px 250px;
+  align-items: center;
+  display: block;
+  margin: auto;
+}
+
 .item1 { grid-area: header;
          font-family: sans-serif;
          font-size: 20px; }
@@ -26,7 +38,7 @@ body{
   margin: auto;
   width: 415px;
   height: 590px;
-  border: 5px solid;
+  border: thin solid #1b8c9c;
   border-color: #1b8c9c;
   bottom: 20%;
 }
