--- a/MapMaker/public/Sigin.cshtml
+++ b/MapMaker/public/Sigin.cshtml
@@ -1,46 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="google-signin-client_id" content="14900610881-8re4ccif04vqcc87hlpppbso6bhs3n3u.apps.googleusercontent.com.apps.googleusercontent.com">
-    <link rel="stylesheet" href="../src/style/MapMaker.style.css">
-    <title>MapMaker</title>
-</head>
-<body>
-   <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
-   <script src="../src/Scripts/bootstrap.min.js"></script>
-   <script src="https://cdn.rawgit.com/oauth-io/oauth-js/c5af4519/dist/oauth.js"></script>
-   <script src="https://apis.google.com/js/platform.js" async defer></script>
-   <script type="script" src="../src/services/FacebookApi.js"></script>
-   <script type="script" src="../src/services/GoogleApi.js"></script>
-   <script type="script" src="../src/services/GitHubOAuth.js"></script>
-   <script async defer crossorigin="anonymous" 
-   src="https://connect.facebook.net/pt_BR/sdk.js"></script>
+﻿
+@{
+    ViewData["Title"] = "Sigin";
+ 
+    Layout = "~/Views/Shared/_LayoutGuest.cshtml";
+}
 
-   <style>
-    body {
-        overflow-y: hidden;
-        background-image: url('assets/images/shopping.jpg');
-        height: 100%;
+@model User
 
-        /* Center and scale the image nicely */
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-   </style>
+<div id="logreg-forms">
 
-   <div id="logreg-forms">
-
-    <form method="post" class="form-signin" >
+    <form asp-action="SiginSubmit" asp-antiforgery="true" method="post" class="form-signin" >
 
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">ReachUp | Sign in</h1>
         <div class="social-login">
-            <a id="github-button" class="btn btn-block btn-social btn-github">
-                <i class="fa fa-github"></i> Sign in with Github
-            </a>
             <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span> </button>
             <button class="btn google-btn social-btn" type="button"><span><i class="fab fa-google-plus-g"></i> Sign in with Google+</span> </button>
         </div>
@@ -104,19 +76,23 @@
         })g" target="_blank" style="color:black">
     </a>
 </p>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="/script.js"></script>
 
 
+@*<form asp-action="LoginForm" asp-antiforgery="true" method="post" style="width: 500px">
+        <div class="form-group">
+            <label asp-for="Email"></label>
+            <input asp-for="Email" class="form-control" placeholder="Email" type="text" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" class="form-control" placeholder="Senha" type="password" />
+        </div>
 
-   <!--<section id="login">
-      <a id="github-button" class="btn btn-block btn-social btn-github">
-        <i class="fa fa-github"></i> Sign in with Github
-      </a>
-      <fb:login-button 
-      scope="public_profile,email" 
-      onlogin="checkLoginState();"
-      >
-      </fb:login-button>
-   </section>-->
+        <div class="form-group">
+            <input value="Entrar" type="submit" class="btn btn-primary" />
+        </div>
 
-</body>
-</html>
+    </form>*@
