--- a/WebAdmin/Views/Index.html
+++ b/WebAdmin/Views/Index.html
@@ -17,9 +17,9 @@
   <div class="form">
     <img src="img/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
     <form class="login-form" >
-      <input type="text" placeholder="Usuario"/>
-      <input type="password" placeholder="Senha"/>
-      <button>login</button>
+      <input id="txtEmail" type="text" placeholder="Usuario"/>
+      <input id="txtPassword" type="password" placeholder="Senha"/>
+      <button id="btnLogin">Login</button>
       <p class="message">Não lembra sua senha? <a href="RecuperarSenha.html">Clique aqui.</a></p>
     </form>
   </div>
@@ -28,5 +28,10 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+<script src="../src/Scripts/login.js"></script>
+<script src="../src/Controllers/AccountController.js"></script>
+<script src="../src/Services/ApiConnection.js"></script>
+<script src="../src/Services/ApiConfig.js"></script>
 </body>
 </html>
