Adding WebAdmin controllers

--- a/WebAdmin/Views/RecuperarSenha.html
+++ b/WebAdmin/Views/RecuperarSenha.html
@@ -19,7 +19,7 @@
     <form class="login-form" >
       <p>Digite seu email para a recuperação de senha.</p>
       <input type="text" placeholder="Email"/>
-      <button>enviar</button><br><br> 
+      <button id="btnRecuperarSenha">enviar</button><br><br> 
       <button>cancelar</button>        
     </form>
   </div>
@@ -28,5 +28,10 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+<script src="../src/Scripts/recoveryPassword.js"></script>
+<script src="../src/Controllers/AccountController.js"></script>
+<script src="../src/Services/ApiConnection.js"></script>
+<script src="../src/Services/ApiConfig.js"></script>
 </body>
 </html>
