--- a/WebAdmin/public/css/StyleIndex.css
+++ b/WebAdmin/public/css/StyleIndex.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import url(https://fonts.googleapis.com/css2?family=Lato&display=swap);
 
 html{
   height: 100%;
